--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,19 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header{
-  background-color: darkgray;
-  padding: 1rem;
-}
-
-header a{
-  color:#ffffff;
-  font-weight: bold;
-  text-decoration: none;
+.site-container{
+  min-height: 100vh;
 }
 
 main{
-  padding: 1rem;
+  flex: 1;
 }
 
 .products{
@@ -40,3 +33,4 @@ main{
 .product-info{
   padding: 1rem;
 }
+
