--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,11 @@ main{
   flex: 1;
 }
 
+.btn-primary{
+  background-color: #f0f040;
+  color: black;
+}
+
 .products{
   display: flex;
   flex-wrap: wrap;
@@ -34,3 +39,6 @@ main{
   padding: 1rem;
 }
 
+.rating span{
+  color:#ffc000;
+}
